# SmartFile

./: .gitignore  README.md  pyproject.toml  sfo-manifest.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
smart_file_organizer/: cli.py  config.example.yml  rules.py  utils.py
tests/: test_cli.py  test_cli_rules.py  test_exif_rule.py  test_hash_rule.py  test_rules_engine.py  test_utils.py  test_windows_edge_cases.py
