[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-file-organizer"
version = "0.1.0"
description = "A safe, test-driven CLI to organize files by rules (type, date, regex), with dry-run and undo."
authors = [{name = "Matthew Ballard", email = "igobymatthew@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.3",
    "PyYAML>=6.0.1",
    "platformdirs>=4.2.0",
    "rich>=13.7.1",
    "Pillow>=10.3.0",
    "piexif>=1.1.3"
]

[project.scripts]
sfo = "smart_file_organizer.cli:app"

[tool.ruff]
line-length = 100
exclude = ["dist", "build"]

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=3.0"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["smart_file_organizer"]

[tool.hatch.build.targets.sdist]
include = ["smart_file_organizer", "README.md", "LICENSE", "pyproject.toml"]
